--- a/src/app/layout/auth/header/header.component.scss
+++ b/src/app/layout/auth/header/header.component.scss
@@ -285,6 +285,30 @@ section.amazonheader.amazonheader3 .menus ul {
     position: relative;
     top: 6px;
 }
+// -----------------search------------
+img.imgsearch {
+    width: 24px;
+    height: 24px;
+    padding-right: 7px;
+    object-fit: cover;
+}
+button.mat-focus-indicator.searchfield.mat-menu-item {
+    display: flex;
+    place-content: start;
+    align-items: center;
+    padding: 0;
+    font-size: 13px;
+    padding: 0px 0px;
+    font-family: inter;
+    letter-spacing: 0.4px;
+}
+.mat-menu-content a {
+    width: 33%;
+    height: 45px;
+    font-size: 12px;
+    line-height: 45px;
+}
+
 
 @media screen and (min-width: 220px) and (max-width: 400px) {
  .logo img {
