--- a/src/app/layout/blog-two/blog-two.component.html
+++ b/src/app/layout/blog-two/blog-two.component.html
@@ -16,8 +16,12 @@
     </div>
     <!----category-line-->
     <div class="category" fxLayout="row">
-            <div class="category" fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="97%" fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px"
-            fxFlex.xl="1910px">
+            <div class="category" fxLayout="column" fxFlex.xs="97%" fxFlex.sm="590px" fxFlex.md="950px"
+                fxFlex.lg="1270px" fxFlex.xl="1910px">
+                <div class="heading-product">
+                    <h1> {{blog.title}}</h1>
+                </div>
+                <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
             <div class="img-product" fxFlex="40%" fxLayout="row">
                 <a href={{blog.productLink}} target="_blank">
                     <img  src={{blog.image}}></a>
@@ -25,18 +29,18 @@
                 <a href={{blog.productLink}} target="_blank">
                     <img  src={{blog.imageTwo}}></a>
 
-
                 <a href={{blog.productLink}} target="_blank">
                     <img src={{blog.imageThree}}></a>
             </div>
             <div class="heading-product" fxFlex="60%">
-                <h1> {{blog.title}}</h1>
+                <!-- <h1> {{blog.title}}</h1> -->
                 <h5>{{blog.productName}}</h5>
                 <p *ngFor="let paragraph of blog.paragraphs">
                     {{paragraph.para}}
                 </p>
             </div>
         </div>
+    </div>
     </div>
     </div>
 </section>
